# AURA-Software

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_check.yaml  clang_format.yaml
application/BMP280/: BMP280.cpp  BMP280.h  CMakeLists.txt
application/Gpio/: CMakeLists.txt  Gpio.cpp  Gpio.h
application/I2C/: I2C.cpp  I2C.h
application/ICM20948/: CMakeLists.txt  ICM20948.cpp  ICM20948.h
application/INA219/: CMakeLists.txt  INA219.cpp  INA219.h
application/Quat/: Quat.cpp
core/: CMakeLists.txt
core/Inc/: main.h
core/Src/: main.cpp
lib/PID/: CMakeLists.txt  PID.cpp  PID.h
lib/Quat/: CMakeLists.txt  Madgwick.cpp  Madgwick.h  Quat.cpp  Quat.h
src/common/bus_drivers/I2C/: CMakeLists.txt  I2C.h
src/common/bus_drivers/SPI/: CMakeLists.txt  SPI.cpp  SPI.h
src/common/dev_drivers/BMP280/: BMP280.cpp  BMP280.h  CMakeLists.txt
src/common/dev_drivers/FSA8S/: CMakeLists.txt  FSA8S.cpp  FSA8S.h
src/common/dev_drivers/Flash/: CMakeLists.txt  Flash.cpp  Flash.h
src/common/dev_drivers/ICM20948/: ICM20948.cpp  ICM20948.h
src/common/dev_drivers/INA219/: INA219.cpp  INA219.h
src/common/dev_drivers/PCA9685/: CMakeLists.txt  PCA9685.cpp  PCA9685.h
src/common/dev_drivers/SD_Card/: CMakeLists.txt  SD_Card.cpp  SD_Card.h
src/common/utility/: CMakeLists.txt  utility.h
src/main/: CMakeLists.txt  main.cpp  main.h
src/main/main_core_0/: CMakeLists.txt  main_core_0.cpp  main_core_0.h
src/main/main_core_1/: CMakeLists.txt  main_core_1.cpp  main_core_1.h
tests/: CMakeLists.txt  main.cpp
